--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -135,7 +135,7 @@
   <view class='bottom'>
     <view class="mingpian {{item.jobStick==1?'zhiding':''}}" wx:for='{{shopList}}' data-id="{{item.companyJobId}}" catchtap='xiangqing'>
       <view class='left'>
-        <image mode='aspectFill' src='/img/index/banner.jpg'></image>
+        <image mode='aspectFill' src='{{item.jobSwiperImages[0]}}'></image>
       </view>
       <view class='right'>
         <view>{{item.company.companyName}}</view>
