--- a/pages/classification/classification.wxml
+++ b/pages/classification/classification.wxml
@@ -11,8 +11,8 @@
   </view>
 <!-- 底部分类 -->
 <view class='foter' >
-<!-- style='height:{{clientY}}px' -->
-  <view class='waw' wx:if='{{gao!=0}}' >
+
+  <view class='waw' wx:if='{{gao!=0}}' style='height:{{clientY}}px'>
     <swiper class='dingwei' bindchange='gaibain' current='{{curren}}' style=' height:{{gao}}rpx' duration='0'>
       <swiper-item  class='active' data-index='{{index}}'>
         <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>
