--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -76,8 +76,8 @@
 
 <!-- 底部分类 -->
 <view class='foter' >
-<!-- style='height:{{clientY}}px' -->
-  <view class='waw' wx:if='{{gao!=0}}' >
+<!-- -->
+  <view class='waw' wx:if='{{gao!=0}}'  style='height:{{clientY}}px' >
     <swiper class='dingwei' bindchange='gaibain' current='{{curren}}' style=' height:{{gao}}rpx' duration='0'>
       <swiper-item  class='active' data-index='{{index}}'>
         <text wx:for='{{leixing}}' wx:for-item="idx" class='ass  {{idx.state==1?"beijing":""}}' catchtap='textdianji' data-ind='{{index}}'>{{idx.jobCategoryName}}              </text>
@@ -161,11 +161,11 @@
 <!-- 底部分类 -->
 
 <!-- 填写报名信息 -->
-<view class='danchuang' style='display:{{dcancel}}'>
+<!-- <view class='danchuang' style='display:{{dcancel}}'>
   <image mode='scaleToFill' src='/img/index/baomingbiao.png'></image>
   <text class='twt1'>是否去填写报名信息？</text>
   <text class='twt2'>报名信息用于报名企业</text>
   <view class='btn1' catchtap='dcancel'>取消</view>
   <view class='btn2' catchtap='dconfirm'>确认</view>
-</view>
+</view> -->
   </scroll-view>
