--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -44,6 +44,12 @@
 </view>
 <!-- 头部分类 -->
 
+<view class='returnfee' catchtap='mendian'>
+  <image src='/img/index/fafei.png'></image>
+  <text>门店导航</text>
+  <image src='/img/index/xiangiqng.png'></image>
+</view>
+
 <!-- 返费通知start-->
 <view class='returnfee' catchtap='returnfee'>
   <image src='/img/index/fafei.png'></image>
