--- a/pages/mendian/mendian.wxss
+++ b/pages/mendian/mendian.wxss
@@ -1,36 +1,5 @@
 page {
-  background-color: #F2F2F2;
-}
-.section {
-  /* border:1px solid red; */
-  margin: 20rpx 4%;
-  font-size: 0.9rem;
-}
-.section input {
-  /* border: 1px solid green; */
-  float: left;
-  width: 68%;
-  height: 2rem;
-   padding-left: 30rpx; 
-  background-color: #fff;
-  border-top-left-radius: 150rpx;
-  border-top-right-radius: 0rpx;
-  border-bottom-left-radius: 150rpx;
-  border-bottom-right-radius: 0rpx;
-}
-.section button{
-  width:27%;
-  height: 2rem;
-  line-height: 2rem;
-  /* border: none; */
-  border-top-left-radius: 0rpx;
-  border-top-right-radius: 150rpx;
-  border-bottom-left-radius: 0rpx;
-  border-bottom-right-radius: 150rpx;
-  outline: none;
-  background-color: #33A1FF;
-  margin: 0;
-  color: #fff;
+  background-color: #f5f5f5;
 }
 .xia {
   background-color: #fff;
