--- a/pages/bendi/bendi.wxss
+++ b/pages/bendi/bendi.wxss
@@ -123,7 +123,17 @@
   width: 30%;
   height: 200rpx;
   border-radius: 10rpx;
+  position: relative;
 }
+.bottom .left .boty{
+position:absolute;
+bottom:0;
+width:100%;
+color: white;
+text-align:center;
+background: rgba(0, 0, 0, 0.5);
+}
+
 .bottom .left image{
   width: 100%;
   height: 100%;
