--- a/pages/classification/classification.wxml
+++ b/pages/classification/classification.wxml
@@ -55,7 +55,7 @@
       </view>
       <view bindtap='sanprice' class='{{xuanze==1?"activeshow":""}}'>
         <image src='/img/center/fanxian.png'></image>
-        返现金额
+        奖励金额
       </view>
       <view bindtap='sanzong' class='{{xuanze==2?"activeshow":""}}'>
         <image src='/img/center/zonghe.png'></image>
@@ -82,7 +82,7 @@
           <view>
             <text wx:for='{{item.jobLabels}}' wx:for-item="idx">{{idx}}</text>
           </view>
-          <view>返{{item.returnMoney}}</view>
+          <view>奖励{{item.returnMoney}}</view>
           <view>{{item.jobSalaryMin}}-{{item.jobSalaryMax}}/月</view>
         </view>
       </view>
@@ -104,7 +104,7 @@
           <view>
             <text wx:for='{{item.jobLabels}}' wx:for-item="idx">{{idx}}</text>
           </view>
-          <view>返{{item.returnMoney}}</view>
+          <view>奖励{{item.returnMoney}}</view>
           <view>{{item.jobSalaryMin}}-{{item.jobSalaryMax}}/月</view>
         </view>
       </view>
