--- a/pages/identical/identical.wxml
+++ b/pages/identical/identical.wxml
@@ -18,5 +18,6 @@
   </view>  -->
     <view class='fenlei lei'>
     <template is="wxParse" data="{{wxParseData:article.nodes}}" />
+    <!-- <rich-text nodes="{{fanfei.content}}"></rich-text> -->
   </view>
 </view>
