--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -351,7 +351,8 @@ width: 70%;
   margin-right: 10rpx;
 }
 .bottom  .mingpian view:nth-of-type(3){
-  color: #999;
+  color: red;
+   
 }
 .bottom  .mingpian view:nth-of-type(4){
   color: #FE7C42;
@@ -498,3 +499,11 @@ Page {
   background: #FAFAFA;
    /* overflow-y: hidden;  */
 }
+/* .waw swiper-item:nth-of-type(1){
+height: 400rpx !important;
+padding-bottom: 120rpx;
+overflow-y: auto;
+}
+.waw swiper-item:nth-of-type(1) button{
+bottom: -50rpx !important;
+} */
