--- a/pages/postdetails/postdetails.wxss
+++ b/pages/postdetails/postdetails.wxss
@@ -56,7 +56,7 @@ swiper-item image {
 
 .leixing .lei:nth-of-type(1) text:nth-of-type(2),
 .leixing .lei:nth-of-type(2) text:nth-of-type(2) {
-  color: #ff844e;
+  color: red;
 }
 
 .leixing .lei:nth-of-type(2) text:nth-of-type(2) {
@@ -131,7 +131,10 @@ swiper-item image {
 .foter{
   padding: 30rpx;
   height: 100rpx;
-  position: relative;
+  position: fixed;
+  bottom: 0;
+  width: 93%;
+  background: white;
 }
 .foter view{
   float:left;   
@@ -235,7 +238,7 @@ line-height: 470rpx;
 }
 
 .hide{
-  z-index: 10;
+  z-index: 100000 !important;
   text-align: center;
   color: white;
   position: fixed;
@@ -278,7 +281,7 @@ line-height: 470rpx;
   line-height: 75rpx;
   position: absolute;
   bottom: 0;
-  right: -25rpx;
+  right: 0rpx;
   background: #33A1FF;
   height: 75rpx;
   width: 50%;
@@ -341,13 +344,13 @@ line-height: 470rpx;
   margin: 0 !important;
   float: none;
   text-align: center;
-  
 }
 .tankuang image {
   width: 100rpx;
   height: 100rpx;
 }
 .flex-one {
+  width: 100%;
   background: #fff;
   height: 400rpx;
   position: relative;
@@ -427,4 +430,10 @@ color: #fff;
 }
 .aaa {
   margin-top:10rpx;
+}
+.footer{
+  background:#fff;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
